@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Aug 2015; Johann Schmitz <ercpe@gentoo.org>
+  -django-rest-framework-2.4.4.ebuild:
+  dev-python/django-rest-framework: dropped old
+
 *django-rest-framework-3.1.3 (16 Aug 2015)
 
   16 Aug 2015; Johann Schmitz <ercpe@gentoo.org>
